--- a/locale/locale_pl_fvlvte.json
+++ b/locale/locale_pl_fvlvte.json
@@ -19,5 +19,23 @@
   "SR_NEGATIVE_REPUTATION_LIMIT": "@{{invokedBy}} sory morda masz za mało reputacji",
   "SR_ADD_OK": "@{{invokedBy}} dodaned '{{title}}' do kolejki sr (pozycja {{index}} za {{when}})",
   "SR_ADD_UNKNOWN_ERROR":  "@{{invokedBy}} sory nie można dodać tego linka",
-  "SR_NOT_FOUND": "@{{invokedBy}} sory nie znalazłem"
+  "SR_NOT_FOUND": "@{{invokedBy}} sory nie znalazłem",
+  "SR_EMPTY_QUEUE": "@{{invokedBy}} kolejka jest pusta",
+  "SR_QUEUE_PRINT": "@{{invokedBy}} oto nadchodzonce 5 pioseneg {{queue}}",
+  "SR_ERR_NO_SONG": "@{{invokedBy}} nie ma nic w queue SR dodaj se piosenke komendom !ksr",
+  "SR_SONG_INFO": "@{{invokedBy}} aktualna piosenka to {{title}} {{url}} dodana przez {{requestedBy}} ({{rep}})",
+  "SR_SKIP_VOTE_IN_PROGRESS": "@{{invokedBy}} potrzeba jeszcze {{counter}} głosuw żeby skipnonc",
+  "SR_SKIP_VOTE_SUCCESS": "@{{invokedBy}} demokracja przemuwila skipujemy",
+  "SR_ADMIN_SKIP": "@{{invokedBy}} autorytarna władza przemuwiła",
+  "SR_WRONG_SONG_NOT_FOUND": "@{{invokedBy}} nie masz piosenki żeby jom wywalic aok",
+  "SR_WRONG_SONG_WIPED": "@{{invokedBy}} wywalona piosenga została {{title}} {{url}}",
+  "SR_MY_SONG_INFO": "@{{invokedBy}} '{{title}}' {{url}} jest na pozycji {{index}} grana za ok. {{when}})",
+  "SR_MY_SONG_NOT_FOUND":  "@{{invokedBy}} nie masz żadnej piosengi dodaj jakomś przez !ksr",
+
+  "SOCIALS_DISCORD": "@{{invokedBy}} elo eskorta wsiadaj na diskorta https://discord.gg/BnRNzSzcv9",
+  "SOCIALS_YT": "@{{invokedBy}} elo daj suba na jutuba https://www.youtube.com/@fvlvte",
+  "SOCIALS_PROJECT": "@{{invokedBy}} robimy teraz songruesta backend: https://github.com/fvlvte/knurobotOG / frontend https://github.com/fvlvte/knurlements-widgtet",
+
+  "TIMER_DISCORD": "elo eskorta wsiadaj na diskorta https://discord.gg/BnRNzSzcv9",
+  "TIMER_YT": "elo daj suba na jutuba https://www.youtube.com/@fvlvte"
 }
