Production roll out.

--- a/locale/locale_pl_chyba__.json
+++ b/locale/locale_pl_chyba__.json
@@ -3,43 +3,56 @@
   "SUCCESS": "@{{invokedBy}} udalo sie git",
   "UNKNOWN_ERROR": "@{{invokedBy}} sory error wyebao",
 
-
   "SR_ERROR_NO_SONG": "@{{invokedBy}} nic nie leci mordo xd",
-  "SR_VOTE_BAD_SUCCESS": "@{{invokedBy}} dałeś syfa ({{change}}) dla @{{targetUser}} i ma ziutek teraz {{currentValue}} punktów reputacji",
-  "SR_VOTE_GOOD_SUCCESS": "@{{invokedBy}} dałeś gita ({{change}}) dla @{{targetUser}} i ma ziutek teraz {{currentValue}} punktów reputacji",
-  "SR_ERROR_VOTE_SELF": "@{{invokedBy}} nie można lizać własnych jaj",
+  "SR_VOTE_BAD_SUCCESS": "@{{invokedBy}} dałeś syfa ({{change}}) dla @{{targetUser}} i ma dziunia teraz {{currentValue}} reputacji",
+  "SR_VOTE_GOOD_SUCCESS": "@{{invokedBy}} dałeś gicik ({{change}}) dla @{{targetUser}} i ma niunia teraz {{currentValue}} reputacji",
+  "SR_ERROR_VOTE_SELF": "@{{invokedBy}} troche ego wyebao",
   "SR_ERROR_VOTE_MULTIPLE": "@{{invokedBy}} tylko jeden głos per piosenka",
-  "SR_ERROR_VOTE_LIMIT": "@{{invokedBy}} limit głosów per stream osiągniety",
+  "SR_ERROR_VOTE_LIMIT": "@{{invokedBy}} limit głosów per stream osiągnięty",
 
-  "SR_BANNED_USER": "@{{invokedBy}} sory morda masz bana na sr",
-  "SR_BANNED_KEYWORD": "@{{invokedBy}} sory morda banned piosenka",
-  "SR_NON_ALLOWED_CATEGORY": "@{{invokedBy}} sory morda niedozwolona kategoria ({{category}})",
-  "SR_VIEW_LIMIT": "@{{invokedBy}} sory morda za mało wyświetleń (minimum {{min}})",
-  "SR_LENGTH_LIMIT": "@{{invokedBy}} sory morda za długie (max {{max}} s)",
-  "SR_NEGATIVE_REPUTATION_LIMIT": "@{{invokedBy}} sory morda masz za mało reputacji",
+  "SR_BANNED_USER": "@{{invokedBy}} sory dziunia masz bana na sr",
+  "SR_BANNED_KEYWORD": "@{{invokedBy}} sory niunia banned piosenka",
+  "SR_NON_ALLOWED_CATEGORY": "@{{invokedBy}} sory niunia niedozwolona kategoria ({{category}})",
+  "SR_VIEW_LIMIT": "@{{invokedBy}} sory niunia za mało wyświetleń (minimum {{min}})",
+  "SR_LENGTH_LIMIT": "@{{invokedBy}} sory niunia za długie (max {{max}} s)",
+  "SR_NEGATIVE_REPUTATION_LIMIT": "@{{invokedBy}} sory dziunia masz za mało reputacji",
   "SR_ADD_OK": "@{{invokedBy}} dodaned '{{title}}' do kolejki sr (pozycja {{index}} za {{when}})",
   "SR_ADD_UNKNOWN_ERROR":  "@{{invokedBy}} sory nie można dodać tego linka",
   "SR_NOT_FOUND": "@{{invokedBy}} sory nie znalazłem",
-  "SR_EMPTY_QUEUE": "@{{invokedBy}} kolejka jest pusta",
-  "SR_QUEUE_PRINT": "@{{invokedBy}} oto nadchodzonce 3 pioseneg {{queue}}",
-  "SR_ERR_NO_SONG": "@{{invokedBy}} nie ma nic w queue SR dodaj se piosenke komendom !ksr",
+  "SR_EMPTY_QUEUE": "@{{invokedBy}} głucho wszędzie",
+  "SR_QUEUE_PRINT": "@{{invokedBy}} oto 3 następne bangerki{{queue}}",
+  "SR_ERR_NO_SONG": "@{{invokedBy}} głucho wszędzie, dodaj coś !ksr",
   "SR_SONG_INFO": "@{{invokedBy}} aktualna piosenka to {{title}} {{url}} dodana przez {{requestedBy}} ({{rep}})",
-  "SR_SKIP_VOTE_IN_PROGRESS": "@{{invokedBy}} potrzeba jeszcze {{counter}} głosuw żeby skipnonc",
-  "SR_SKIP_VOTE_SUCCESS": "@{{invokedBy}} demokracja przemuwila skipujemy",
+  "SR_SKIP_VOTE_IN_PROGRESS": "@{{invokedBy}} potrzeba jeszcze {{counter}} głosów, żeby skip",
+  "SR_SKIP_VOTE_SUCCESS": "@{{invokedBy}} demokracja przemówiła, skipujemy",
   "SR_ADMIN_SKIP": "@{{invokedBy}} autorytarna władza przemuwiła",
-  "SR_WRONG_SONG_NOT_FOUND": "@{{invokedBy}} nie masz piosenki żeby jom wywalic aok",
-  "SR_WRONG_SONG_WIPED": "@{{invokedBy}} wywalona piosenga została {{title}} {{url}}",
+  "SR_WRONG_SONG_NOT_FOUND": "@{{invokedBy}} chciałeś wywalić czyjąś nutkę?",
+  "SR_WRONG_SONG_WIPED": "@{{invokedBy}} wyrzuconed {{title}} {{url}}",
   "SR_MY_SONG_INFO": "@{{invokedBy}} '{{title}}' {{url}} jest na pozycji {{index}} grana za ok. {{when}})",
-  "SR_MY_SONG_NOT_FOUND":  "@{{invokedBy}} nie masz żadnej piosengi dodaj jakomś przez !ksr",
+  "SR_MY_SONG_NOT_FOUND":  "@{{invokedBy}} wpierw dodaj coś niunia !ksr :3",
 
-  "SOCIALS_DISCORD": "@{{invokedBy}} elo eskorta wsiadaj na diskorta https://discord.gg/BnRNzSzcv9",
-  "SOCIALS_YT": "@{{invokedBy}} elo daj suba na jutuba https://www.youtube.com/@fvlvte",
-  "SOCIALS_PROJECT": "@{{invokedBy}} robimy teraz songruesta backend: https://github.com/fvlvte/knurobotOG / frontend https://github.com/fvlvte/knurlements-widgtet",
+  "SOCIALS_DISCORD": "@{{invokedBy}} elo niunia wbijaj na discord https://discord.gg/Vs67QnFTKX",
+  "SOCIALS_YT": "@{{invokedBy}} random szociki https://www.tiktok.com/@chyba___",
+  "SOCIALS_PROJECT": "@{{invokedBy}} <@344258263468081163> zrobił songruesta backend: https://github.com/fvlvte/knurobotOG / frontend https://github.com/fvlvte/knurlements-widgtet",
 
-  "TIMER_DISCORD": "elo eskorta wsiadaj na diskorta https://discord.gg/BnRNzSzcv9",
-  "TIMER_YT": "elo daj suba na jutuba https://www.youtube.com/@fvlvte",
+  "TIMER_DISCORD": "elo niunia wbijaj na discord https://discord.gg/Vs67QnFTKX",
+  "TIMER_YT": "random szociki https://www.tiktok.com/@chyba___",
 
-  "SR_QUEUE_LIMIT": "@{{invokedBy}} sory kolejka jusz jest pelna milosci (max. {{limit}} piosenek)",
+  "SR_QUEUE_LIMIT": "@{{invokedBy}} sory kolejka jusz jest pełna miłości (max. {{limit}} piosenek)",
   "SR_SONG_IN_QUEUE": "@{{invokedBy}} sory ta piosenka jest już w kłełe ({{title}} {{url}})",
-  "SR_QUEUE_SONG_LIMIT": "@{{invokedBy}} sory możesz mieć maksymalnie {{limit}} kawałkuw w kolejce"
+  "SR_QUEUE_SONG_LIMIT": "@{{invokedBy}} sorka maks {{limit}} nutka na osobe w kolejce",
+
+  "SR_INVALID_VOLUME_VALUE": "@{{invokedBy}} sory nieprawidlowa wartosc 0 - 100",
+  "SR_VOLUME_SET": "@{{invokedBy}} ok ustawioned volume ok",
+
+  "CMD_CreateReward_HELP": "pomoc do komendy aha ok",
+  "CMD_ReloadLocale_HELP": "pomoc do komendy aha ok",
+  "CMD_SongRequestAdd_HELP": "pomoc do komendy aha ok",
+  "CMD_SongRequestCurrent_HELP": "pomoc do komendy aok",
+  "CMD_SongRequestMySong_HELP": "pozdrowienia z podziemia",
+  "CMD_SongRequestQueue_HELP": "ahah dupa huj",
+  "CMD_SongRequestReputationVote_HELP": "kut as",
+  "CMD_SongRequestSkipVote_HELP": "sra nie",
+  "CMD_SongRequestWipe_HELP": "kup sko",
+  "CMD_SongRequestWrongSong_HELP": "wa le nie"
 }
