--- a/locale/locale_pl_chyba__.json
+++ b/locale/locale_pl_chyba__.json
@@ -16,7 +16,7 @@
   "SR_VIEW_LIMIT": "@{{invokedBy}} sory niunia za mało wyświetleń (minimum {{min}})",
   "SR_LENGTH_LIMIT": "@{{invokedBy}} sory niunia za długie (max {{max}} s)",
   "SR_NEGATIVE_REPUTATION_LIMIT": "@{{invokedBy}} sory dziunia masz za mało reputacji",
-  "SR_ADD_OK": "@{{invokedBy}} dodaned '{{title}}' do kolejki sr (pozycja {{index}} za {{when}})",
+  "SR_ADD_OK": "@{{invokedBy}} dodaned '{{title}}' {{url}} do kolejki sr (pozycja {{index}} za {{when}})",
   "SR_ADD_UNKNOWN_ERROR":  "@{{invokedBy}} sory nie można dodać tego linka",
   "SR_NOT_FOUND": "@{{invokedBy}} sory nie znalazłem",
   "SR_EMPTY_QUEUE": "@{{invokedBy}} głucho wszędzie",
