--- a/locale/locale_pl_chyba__.json
+++ b/locale/locale_pl_chyba__.json
@@ -16,19 +16,19 @@
   "SR_VIEW_LIMIT": "@{{invokedBy}} sory niunia za mało wyświetleń (minimum {{min}})",
   "SR_LENGTH_LIMIT": "@{{invokedBy}} sory niunia za długie (max {{max}} s)",
   "SR_NEGATIVE_REPUTATION_LIMIT": "@{{invokedBy}} sory dziunia masz za mało reputacji",
-  "SR_ADD_OK": "@{{invokedBy}} dodaned '{{title}}' {{url}} do kolejki sr (pozycja {{index}} za {{when}})",
+  "SR_ADD_OK": "@{{invokedBy}} dodaned '{{title}}' {{{url}}} do kolejki sr (pozycja {{index}} za {{when}})",
   "SR_ADD_UNKNOWN_ERROR":  "@{{invokedBy}} sory nie można dodać tego linka",
   "SR_NOT_FOUND": "@{{invokedBy}} sory nie znalazłem",
   "SR_EMPTY_QUEUE": "@{{invokedBy}} głucho wszędzie",
   "SR_QUEUE_PRINT": "@{{invokedBy}} oto 3 następne bangerki{{queue}}",
   "SR_ERR_NO_SONG": "@{{invokedBy}} głucho wszędzie, dodaj coś !ksr",
-  "SR_SONG_INFO": "@{{invokedBy}} aktualna piosenka to {{title}} {{url}} dodana przez {{requestedBy}} ({{rep}})",
+  "SR_SONG_INFO": "@{{invokedBy}} aktualna piosenka to {{title}} {{{url}}} dodana przez {{requestedBy}} ({{rep}})",
   "SR_SKIP_VOTE_IN_PROGRESS": "@{{invokedBy}} potrzeba jeszcze {{counter}} głosów, żeby skip",
   "SR_SKIP_VOTE_SUCCESS": "@{{invokedBy}} demokracja przemówiła, skipujemy",
   "SR_ADMIN_SKIP": "@{{invokedBy}} autorytarna władza przemuwiła",
   "SR_WRONG_SONG_NOT_FOUND": "@{{invokedBy}} chciałeś wywalić czyjąś nutkę?",
-  "SR_WRONG_SONG_WIPED": "@{{invokedBy}} wyrzuconed {{title}} {{url}}",
-  "SR_MY_SONG_INFO": "@{{invokedBy}} '{{title}}' {{url}} jest na pozycji {{index}} grana za ok. {{when}})",
+  "SR_WRONG_SONG_WIPED": "@{{invokedBy}} wyrzuconed {{title}} {{{url}}}",
+  "SR_MY_SONG_INFO": "@{{invokedBy}} '{{title}}' {{{url}}} jest na pozycji {{index}} grana za ok. {{when}})",
   "SR_MY_SONG_NOT_FOUND":  "@{{invokedBy}} wpierw dodaj coś niunia !ksr :3",
 
   "SOCIALS_DISCORD": "@{{invokedBy}} elo niunia wbijaj na discord https://discord.gg/Vs67QnFTKX",
@@ -39,7 +39,7 @@
   "TIMER_YT": "random szociki https://www.tiktok.com/@chyba___",
 
   "SR_QUEUE_LIMIT": "@{{invokedBy}} sory kolejka jusz jest pełna miłości (max. {{limit}} piosenek)",
-  "SR_SONG_IN_QUEUE": "@{{invokedBy}} sory ta piosenka jest już w kłełe ({{title}} {{url}})",
+  "SR_SONG_IN_QUEUE": "@{{invokedBy}} sory ta piosenka jest już w kłełe ({{title}} {{{url}}})",
   "SR_QUEUE_SONG_LIMIT": "@{{invokedBy}} sorka maks {{limit}} nutka na osobe w kolejce",
 
   "SR_INVALID_VOLUME_VALUE": "@{{invokedBy}} sory nieprawidlowa wartosc 0 - 100",
