Web socket core functionality / removed song title from messages.

--- a/locale/locale_pl_fvlvte.json
+++ b/locale/locale_pl_fvlvte.json
@@ -17,19 +17,19 @@
   "SR_VIEW_LIMIT": "@{{invokedBy}} sory morda za mało wyświetleń (minimum {{min}})",
   "SR_LENGTH_LIMIT": "@{{invokedBy}} sory morda za długie (max {{max}} s)",
   "SR_NEGATIVE_REPUTATION_LIMIT": "@{{invokedBy}} sory morda masz za mało reputacji",
-  "SR_ADD_OK": "@{{invokedBy}} dodaned '{{title}}' {{{url}}} do kolejki sr (pozycja {{index}} za {{when}})",
+  "SR_ADD_OK": "@{{invokedBy}} dodaned {{{url}}} do kolejki sr (pozycja {{index}} za {{when}})",
   "SR_ADD_UNKNOWN_ERROR":  "@{{invokedBy}} sory nie można dodać tego linka",
   "SR_NOT_FOUND": "@{{invokedBy}} sory nie znalazłem",
   "SR_EMPTY_QUEUE": "@{{invokedBy}} kolejka jest pusta",
   "SR_QUEUE_PRINT": "@{{invokedBy}} oto nadchodzonce 3 pioseneg {{queue}}",
   "SR_ERR_NO_SONG": "@{{invokedBy}} nie ma nic w queue SR dodaj se piosenke komendom !ksr",
-  "SR_SONG_INFO": "@{{invokedBy}} aktualna piosenka to {{title}} {{{url}}} dodana przez {{requestedBy}} ({{rep}})",
+  "SR_SONG_INFO": "@{{invokedBy}} aktualna piosenka to {{{url}}} dodana przez {{requestedBy}} ({{rep}})",
   "SR_SKIP_VOTE_IN_PROGRESS": "@{{invokedBy}} potrzeba jeszcze {{counter}} głosuw żeby skipnonc",
   "SR_SKIP_VOTE_SUCCESS": "@{{invokedBy}} demokracja przemuwila skipujemy",
   "SR_ADMIN_SKIP": "@{{invokedBy}} autorytarna władza przemuwiła",
   "SR_WRONG_SONG_NOT_FOUND": "@{{invokedBy}} nie masz piosenki żeby jom wywalic aok",
-  "SR_WRONG_SONG_WIPED": "@{{invokedBy}} wywalona piosenga została {{title}} {{{url}}}",
-  "SR_MY_SONG_INFO": "@{{invokedBy}} '{{title}}' {{{url}}} jest na pozycji {{index}} grana za ok. {{when}})",
+  "SR_WRONG_SONG_WIPED": "@{{invokedBy}} wywalona piosenga została {{{url}}}",
+  "SR_MY_SONG_INFO": "@{{invokedBy}} {{{url}}} jest na pozycji {{index}} grana za ok. {{when}})",
   "SR_MY_SONG_NOT_FOUND":  "@{{invokedBy}} nie masz żadnej piosengi dodaj jakomś przez !ksr",
 
   "INFO_KNURCAMP": "aktualnie trwa knurcamp z fronted - reacta, możesz wziąć udział biernie - więcej info na DC https://discord.gg/BnRNzSzcv9",
@@ -41,7 +41,7 @@
   "TIMER_YT": "elo daj suba na jutuba https://www.youtube.com/@fvlvte",
 
   "SR_QUEUE_LIMIT": "@{{invokedBy}} sory kolejka jusz jest pelna milosci (max. {{limit}} piosenek)",
-  "SR_SONG_IN_QUEUE": "@{{invokedBy}} sory ta piosenka jest już w kłełe ({{title}} {{{url}}})",
+  "SR_SONG_IN_QUEUE": "@{{invokedBy}} sory ta piosenka jest już w kłełe ({{{url}}})",
   "SR_QUEUE_SONG_LIMIT": "@{{invokedBy}} sory możesz mieć maksymalnie {{limit}} kawałkuw w kolejce",
 
   "SR_INVALID_VOLUME_VALUE": "@{{invokedBy}} sory nieprawidlowa wartosc 0 - 100",
