--- a/locale/locale_pl_fvlvte.json
+++ b/locale/locale_pl_fvlvte.json
@@ -35,7 +35,7 @@
   "INFO_KNURCAMP": "aktualnie trwa knurcamp z fronted - reacta, możesz wziąć udział biernie - więcej info na DC https://discord.gg/BnRNzSzcv9",
   "SOCIALS_DISCORD": "@{{invokedBy}} elo eskorta wsiadaj na diskorta https://discord.gg/BnRNzSzcv9",
   "SOCIALS_YT": "@{{invokedBy}} elo daj suba na jutuba https://www.youtube.com/@fvlvte",
-  "SOCIALS_PROJECT": "@{{invokedBy}} robimy teraz songruesta backend: https://github.com/fvlvte/knurobotOG / frontend https://github.com/fvlvte/knurclub-frontend",
+  "SOCIALS_PROJECT": "@{{invokedBy}} robimy teraz songruesta backend: https://github.com/fvlvte/knurclub-backend-public / frontend https://github.com/fvlvte/knurclub-frontend-public",
 
   "TIMER_DISCORD": "elo eskorta wsiadaj na diskorta https://discord.gg/BnRNzSzcv9",
   "TIMER_YT": "elo daj suba na jutuba https://www.youtube.com/@fvlvte",
